raffia/tests/error/scss/variable/missing-value.snap
---
source: raffia/tests/error.rs
---
error: component value is expected
  ┌─ missing-value.scss:1:4
  │
1 │ $a:;
  │    ^


